add lightcolor to dropdown bground

--- a/app/views/layouts/_user_dropdown_closed.html.erb
+++ b/app/views/layouts/_user_dropdown_closed.html.erb
@@ -10,6 +10,7 @@
             link-dark
             text-decoration-none
             dropdown-toggle
+            bg-light
           "
         id="dropdownUser2"
         data-bs-toggle="dropdown"
@@ -24,7 +25,7 @@
         <% end %>
       </a>
       <ul
-        class="dropdown-menu text-small shadow"
+        class="dropdown-menu text-small shadow bg-light"
         aria-labelledby="dropdownUser2"
         style=""
       >
