--- a/app/views/layouts/_user_dropdown_opened.html.erb
+++ b/app/views/layouts/_user_dropdown_opened.html.erb
@@ -28,7 +28,7 @@
         <% end %>
       </a>
       <ul
-        class="dropdown-menu text-small shadow"
+        class="dropdown-menu text-small shadow bg-light"
         aria-labelledby="dropdownUser2"
         style=""
       >
