--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -22,7 +22,7 @@
 
 
         <div class="col d-flex justify-content-end me-4">
-          <div class="card border-light  col-3">
+          <div class="card border-light col-3 lg-auto">
             <div class="d-flex justify-content-around bg-light ">
               <a href="#"><span class="badge rounded-pill bg-success" data-bs-toggle="tooltip" data-bs-placement="top" title="Approved"><span class="iconify" data-icon="mdi:check-bold" style="color: white;" data-width="25" data-height="25"></span><span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:approved]%></span></span></a>
               <a href="#"><span class="badge rounded-pill bg-warning" data-bs-toggle="tooltip" data-bs-placement="top" title="Need Review"><span class="iconify" data-icon="jam:write-f" style="color: white;" data-width="25" data-height="25"></span><span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:need_review]%></span></span></a>
@@ -39,11 +39,12 @@
       </div>
 
 
-
-      <div class="card border-secondary p-0 m-50 bg-light ">
-        <div class="card-header-summary">Résumé</div>
-        <div class="card-body-summary justify-content-center">
-          <%= simple_format(@article.summary)%>
+      <div class="summary">
+        <div class="card border-secondary p-0 m-50 bg-light ">
+          <div class="card-header">Résumé</div>
+          <div class="card-body-summary justify-content-center">
+            <%= simple_format(@article.summary)%>
+          </div>
         </div>
       </div>
 
