create a specific css file for above style and add in assets

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,8 +11,6 @@
  * It is generally better to create a new file per style scope.
  *
  *= require bootstrap
- *= require article_index
- *= require article_show
+ *= require above
 
  */
- 
