--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,4 @@
-
+  <%= stylesheet_link_tag "article_show" %>
 <div class="col">
   <%= render 'layouts/header_small' %>
   <div class="offset-2 col-8 mx-auto">
