--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -53,7 +53,8 @@
       <div class="card border-light p-4 justify-content-center bg-light ">
         <div class="card-header">Protocole</div>
         <div class="card-body justify-content-center">
-          <%= simple_format(@article.protocol)%>
+          <br>
+            <%=simple_format(@article.protocol)%>
         </div>
       </div>
 
@@ -61,6 +62,7 @@
       <div class="card border-light p-4 justify-content-center bg-light ">
         <div class="card-header">Résultats</div>
         <div class="card-body justify-content-center">
+        <br>
           <%= simple_format(@article.result)%>
         </div>
       </div>
@@ -70,6 +72,7 @@
       <div class="card border-light p-4 justify-content-center bg-light ">
         <div class="card-header">Conclusion</div>
         <div class="card-body justify-content-center">
+        <br>
           <%= simple_format(@article.conclusion)%>
         </div>
       </div>
@@ -78,7 +81,8 @@
 
       <div class="card border-light p-4 justify-content-center bg-light ">
         <div class="card-header">Références</div>
-        <div class="card-body justify-content-center">
+        <div class="card-body-references justify-content-center">
+        <br>
           <%= simple_format(@article.references)%>
         </div>
       </div>
