--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,11 @@
 <div class="row d-flex">
   <%= render 'layouts/navbar_closed' %>
   <div class="col">
+    <% unless controller_name == "articles" && action_name == "index" %>
+      <%= render 'layouts/header_small' %>
+    <% else %>
+      <%= render 'layouts/header_big' %>
+    <% end %>
   <%= yield %>
   <% unless controller_name == "sessions" || controller_name == "registrations" || controller_name == "passwords" %>
   <%=render 'layouts/footer'%>
