--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,19 +1,17 @@
-<div class="container mt-4 mb-2 text-center">
-    <h3>Mot de passe oublié ?</h3>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field mt-2">
-    <%= f.label :email, "Email", class:"mt-3"%></br>
-    <%= f.email_field :email, class: 'form-control-lg', autofocus: true, autocomplete: "email" %>
+<div class="offset-2 col-6 col-xl-6 mx-auto">
+  <div class="card text-center border-secondary py-4 bg-light above-small">
+      <h3>Mot de passe oublié ?</h3>
+      <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
+        <div class="field mt-2">
+          <%= f.label :email, "Email", class:"mt-3"%></br>
+          <%= f.email_field :email, class: 'form-control-lg', autofocus: true, autocomplete: "email" %>
+        </div>
+        <div class="actions m-2">
+          <%= f.submit "envoie des instructions", class: "btn btn-lg btn-secondary border-primary m-2" %>
+        </div>
+      <% end %>
+      <%= render "devise/shared/links" %>
   </div>
-
-  <div class="actions m-2">
-    <%= f.submit "envoie des instructions", class: "btn btn-lg btn-secondary border-primary m-2" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
-
 </div>
+
