--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -24,9 +24,48 @@
         <div class="col d-flex justify-content-end me-4">
           <div class="card border-light  col-3">
             <div class="d-flex justify-content-around bg-light ">
-              <a href="#"><span class="badge rounded-pill bg-success" data-bs-toggle="tooltip" data-bs-placement="top" title="Approved"><span class="iconify" data-icon="mdi:check-bold" style="color: white;" data-width="25" data-height="25"></span><span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:approved]%></span></span></a>
-              <a href="#"><span class="badge rounded-pill bg-warning" data-bs-toggle="tooltip" data-bs-placement="top" title="Need Review"><span class="iconify" data-icon="jam:write-f" style="color: white;" data-width="25" data-height="25"></span><span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:need_review]%></span></span></a>
-              <a href="#"><span class="badge rounded-pill bg-danger" data-bs-toggle="tooltip" data-bs-placement="top" title="Not Approved"><span class="iconify" data-icon="emojione-monotone:cross-mark" style="color: white;" data-width="30" data-height="25"></span><span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:not_approved]%></span></span></a>
+              <%if user_signed_in?%>
+                <a href="#">
+                  <span class="badge rounded-pill bg-success" data-bs-toggle="tooltip" data-bs-placement="top" title="Approved">
+
+                    <%if whith_tag(current_user,@article) == "Approved"%>
+                      <span class="iconify" data-icon="mdi:check-bold" style="color: black;" data-width="25" data-height="25"></span>
+                    <%else%>
+                      <span class="iconify" data-icon="mdi:check-bold" style="color: white;" data-width="25" data-height="25"></span>
+                    <%end%> 
+
+                    <span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:approved]%></span>
+                  </span>
+                </a>
+                <a href="#">
+                  <span class="badge rounded-pill bg-warning" data-bs-toggle="tooltip" data-bs-placement="top" title="Need Review">
+
+                    <%if whith_tag(current_user,@article) == "Need Review"%>
+                      <span class="iconify" data-icon="jam:write-f" style="color: black;" data-width="25" data-height="25"></span>
+                    <%else%>
+                      <span class="iconify" data-icon="jam:write-f" style="color: white;" data-width="25" data-height="25"></span>
+                    <%end%>        
+
+                    <span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:need_review]%></span>
+                  </span>
+                </a>
+                <a href="#">
+                  <span class="badge rounded-pill bg-danger" data-bs-toggle="tooltip" data-bs-placement="top" title="Not Approved">
+
+                    <%if whith_tag(current_user,@article) == "Not Approved"%>
+                      <span class="iconify" data-icon="emojione-monotone:cross-mark" style="color: black;" data-width="30" data-height="25"></span>
+                    <%else%>
+                      <span class="iconify" data-icon="emojione-monotone:cross-mark" style="color: white;" data-width="30" data-height="25"></span>
+                    <%end%>
+                    
+                    <span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:not_approved]%></span>
+                  </span>
+                </a>                       
+              <%else%>
+                <a href="#"><span class="badge rounded-pill bg-success" data-bs-toggle="tooltip" data-bs-placement="top" title="Approved"><span class="iconify" data-icon="mdi:check-bold" style="color: white;" data-width="25" data-height="25"></span><span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:approved]%></span></span></a>
+                <a href="#"><span class="badge rounded-pill bg-warning" data-bs-toggle="tooltip" data-bs-placement="top" title="Need Review"><span class="iconify" data-icon="jam:write-f" style="color: white;" data-width="25" data-height="25"></span><span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:need_review]%></span></span></a>
+                <a href="#"><span class="badge rounded-pill bg-danger" data-bs-toggle="tooltip" data-bs-placement="top" title="Not Approved"><span class="iconify" data-icon="emojione-monotone:cross-mark" style="color: white;" data-width="30" data-height="25"></span><span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:not_approved]%></span></span></a>
+              <%end%>
             </div>
           </div>
         </div>
