--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,92 +1,14 @@
-  <%= stylesheet_link_tag "article_show" %>
+<%= stylesheet_link_tag "article_show" %>
+
 <div class="col">
   <div class="offset-2 col-8 mx-auto">
     <div class="card border-secondary p-4 justify-content-center bg-light above-small ">
 
-      <div class="row align-items-start">
+     <%=render 'header_article_show'%>
 
+     <%=render 'details_article_show'%> 
 
-          <div class="card border-light col-3 bg-light">
-          <% if @article.user.avatar.attached? %>
-            <%= image_tag(@article.user.avatar, class: 'rounded-circle ms-md-5 ms-0', style: "width: 5em; height: 5em") %>
-          <% else %>
-            <%= image_tag(asset_path('default_avatar.png'), class: 'rounded-circle ms-md-5 ms-0', style: "width: 5em; height: 5em") %>
-          <% end %>
-
-            <div class="ms-md-5 ms-0">
-              <h5><em><%= @article.user.first_name%>
-              <%= @article.user.last_name%></em></h5>
-            </div>
-          </div>
-
-
-        <div class="col d-flex justify-content-end me-5 mt-2">
-          <div class="card border-light col-3 mt-2">
-            <div class="d-flex justify-content-around bg-light ">
-              <a href="#"><span class="badge badge-fake rounded-pill bg-success" data-bs-toggle="tooltip" data-bs-placement="top" title="Approved"><span class="iconify" data-icon="mdi:check-bold" style="color: white;" data-width="25" data-height="25"></span><span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:approved]%></span></span></a>
-              <a href="#"><span class="badge badge-fake rounded-pill bg-warning" data-bs-toggle="tooltip" data-bs-placement="top" title="Need Review"><span class="iconify" data-icon="jam:write-f" style="color: white;" data-width="25" data-height="25"></span><span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:need_review]%></span></span></a>
-              <a href="#"><span class="badge badge-fake rounded-pill bg-danger" data-bs-toggle="tooltip" data-bs-placement="top" title="Not Approved"><span class="iconify" data-icon="emojione-monotone:cross-mark" style="color: white;" data-width="30" data-height="25"></span><span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:not_approved]%></span></span></a>
-            </div>
-          </div>
-        </div>
-
-      </div>
-
-      <div class="text-center card border-light bg-light ">
-        <p><br></p>
-        <h3><b><%= @article.title%></b></h3>
-      </div>
-
-
-      <div class="summary">
-        <div class="card border-secondary p-0 m-50 bg-light ">
-          <div class="card-header">Résumé</div>
-          <div class="card-body-summary justify-content-center">
-            <%= simple_format(@article.summary)%>
-          </div>
-        </div>
-      </div>
-
-
-
-      <div class="card border-light p-4 justify-content-center bg-light ">
-        <div class="card-header">Protocole</div>
-        <div class="card-body justify-content-center">
-          <br>
-            <%=simple_format(@article.protocol)%>
-        </div>
-      </div>
-
-
-      <div class="card border-light p-4 justify-content-center bg-light ">
-        <div class="card-header">Résultats</div>
-        <div class="card-body justify-content-center">
-        <br>
-          <%= simple_format(@article.result)%>
-        </div>
-      </div>
-
-
-
-      <div class="card border-light p-4 justify-content-center bg-light ">
-        <div class="card-header">Conclusion</div>
-        <div class="card-body justify-content-center">
-        <br>
-          <%= simple_format(@article.conclusion)%>
-        </div>
-      </div>
-
-
-
-      <div class="card border-light p-4 justify-content-center bg-light ">
-        <div class="card-header">Références</div>
-        <div class="card-body-references justify-content-center">
-        <br>
-          <%= simple_format(@article.references)%>
-        </div>
-      </div>
-
-      </div>
     </div>
   </div>
+</div>
 
