--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -17,7 +17,7 @@
           <%= f.password_field :password_confirmation, class: 'form-control-lg', autocomplete: "new-password" %>
         </div>
         <div class="actions m-2">
-          <%= f.submit "Modifier le mot de passe", class:"btn btn-lg btn-secondary border-primary m-2" %>
+          <%= f.submit "Modifier le mot de passe", class:"btn btn-lg btn-primary border-primary m-2" %>
         </div>
       <% end %>
       <%= render "devise/shared/links" %>
