--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -8,7 +8,7 @@
           <%= f.email_field :email, class: 'form-control-lg', autofocus: true, autocomplete: "email" %>
         </div>
         <div class="actions m-2">
-          <%= f.submit "envoie des instructions", class: "btn btn-lg btn-secondary border-primary m-2" %>
+          <%= f.submit "envoie des instructions", class: "btn btn-lg btn-primary m-2" %>
         </div>
       <% end %>
       <%= render "devise/shared/links" %>
