--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,4 +1,5 @@
-<div class="container mt-4 mb-2 text-center">
+  <div class="offset-2 col-6 col-xl-6 mx-auto">
+    <div class="card text-center border-secondary py-4 bg-light above-small">
     <h3>Mot de passe oublié ?</h3>
 
 <%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
@@ -10,9 +11,10 @@
   </div>
 
   <div class="actions m-2">
-    <%= f.submit "envoyer",  class: "btn btn-lg btn-light border-secondary"  %>
+    <%= f.submit "envoyer",  class: "btn btn-lg btn-primary"  %>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
 </div>
