--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -24,45 +24,28 @@
           <div class="card border-light col-3 mt-2">
             <div class="d-flex justify-content-around bg-light ">
 
-              <%if user_signed_in?%>
-                <a href="<%=article_tags_path(@article.id)%>" data-method="post">
+              <%if user_signed_in?%>        
+
+                <%if whith_tag(current_user,@article) == "Approved"%>
+                  <a href="<%=article_tag_path(@article.id, @article.tags.find_by(user: current_user).id)%>" data-method="delete"><span class="badge badge-fake rounded-pill bg-success" data-bs-toggle="tooltip" data-bs-placement="top" title="Approved"><span class="iconify" data-icon="mdi:check-bold" style="color: #2c3e50;" data-width="25" data-height="25"></span><span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:approved]%></span></span> 
+                <%else%>
+                  <a href="<%=article_tags_path(@article.id)%>" data-method="post"><span class="badge badge-fake rounded-pill bg-success" data-bs-toggle="tooltip" data-bs-placement="top" title="Approved"><span class="iconify" data-icon="mdi:check-bold" style="color: white;" data-width="25" data-height="25"></span><span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:approved]%></span></span> 
+                <%end%>                 
+
+                <%if whith_tag(current_user,@article) == "Need Review"%>
+                  <a href="<%=article_tag_path(@article.id, @article.tags.find_by(user: current_user).id)%>" data-method="delete"><span class="badge badge-fake rounded-pill bg-warning" data-bs-toggle="tooltip" data-bs-placement="top" title="Need Review"><span class="iconify" data-icon="jam:write-f" style="color: #2c3e50;" data-width="25" data-height="25"></span><span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:need_review]%></span></span></a> 
+                <%else%>
+                  <a href="<%=article_tags_path(@article.id)%>" data-method="post"><span class="badge badge-fake rounded-pill bg-warning" data-bs-toggle="tooltip" data-bs-placement="top" title="Need Review"><span class="iconify" data-icon="jam:write-f" style="color: white;" data-width="25" data-height="25"></span><span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:need_review]%></span></span></a>
+                <%end%>        
 
                 
-                  <span class="badge badge-fake rounded-pill bg-success" data-bs-toggle="tooltip" data-bs-placement="top" title="Approved">
-
-                    <%if whith_tag(current_user,@article) == "Approved"%>
-                      <span class="iconify" data-icon="mdi:check-bold" style="color: black;" data-width="25" data-height="25"></span>
-                    <%else%>
-                      <span class="iconify" data-icon="mdi:check-bold" style="color: white;" data-width="25" data-height="25"></span>
-                    <%end%> 
-
-                    <span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:approved]%></span>
-                  </span>
-                </a>
-                <a href="#">
-                  <span class="badge badge-fake rounded-pill bg-warning" data-bs-toggle="tooltip" data-bs-placement="top" title="Need Review">
-
-                    <%if whith_tag(current_user,@article) == "Need Review"%>
-                      <span class="iconify" data-icon="jam:write-f" style="color: black;" data-width="25" data-height="25"></span>
-                    <%else%>
-                      <span class="iconify" data-icon="jam:write-f" style="color: white;" data-width="25" data-height="25"></span>
-                    <%end%>        
-
-                    <span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:need_review]%></span>
-                  </span>
-                </a>
-                <a href="#">
-                  <span class="badge badge-fake rounded-pill bg-danger" data-bs-toggle="tooltip" data-bs-placement="top" title="Not Approved">
-
-                    <%if whith_tag(current_user,@article) == "Not Approved"%>
-                      <span class="iconify" data-icon="emojione-monotone:cross-mark" style="color: black;" data-width="30" data-height="25"></span>
-                    <%else%>
-                      <span class="iconify" data-icon="emojione-monotone:cross-mark" style="color: white;" data-width="30" data-height="25"></span>
-                    <%end%>
+                <%if whith_tag(current_user,@article) == "Not Approved"%>
+                  <a href="<%=article_tag_path(@article.id, @article.tags.find_by(user: current_user).id)%>" data-method="delete">s<span class="badge badge-fake rounded-pill bg-danger" data-bs-toggle="tooltip" data-bs-placement="top" title="Not Approved"><span class="iconify" data-icon="emojione-monotone:cross-mark" style="color: #2c3e50;" data-width="30" data-height="25"></span><span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:not_approved]%></span></span></a>
+                <%else%>
+                  <a href="<%=article_tags_path(@article.id)%>" data-method="post"><span class="badge badge-fake rounded-pill bg-danger" data-bs-toggle="tooltip" data-bs-placement="top" title="Not Approved"><span class="iconify" data-icon="emojione-monotone:cross-mark" style="color: white;" data-width="30" data-height="25"></span><span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:not_approved]%></span></span></a>
+                <%end%>
                     
-                    <span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:not_approved]%></span>
-                  </span>
-                </a>                       
+                                         
               <%else%>
                 <a href="#"><span class="badge badge-fake rounded-pill bg-success" data-bs-toggle="tooltip" data-bs-placement="top" title="Approved"><span class="iconify" data-icon="mdi:check-bold" style="color: white;" data-width="25" data-height="25"></span><span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:approved]%></span></span></a>
                 <a href="#"><span class="badge badge-fake rounded-pill bg-warning" data-bs-toggle="tooltip" data-bs-placement="top" title="Need Review"><span class="iconify" data-icon="jam:write-f" style="color: white;" data-width="25" data-height="25"></span><span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:need_review]%></span></span></a>
