change_name_navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div class="row d-flex">
-  <%= render 'layouts/navbar_closed' %>
+  <%= render 'layouts/navbar' %>
   <div class="col">
     <% unless controller_name == "articles" && action_name == "index" %>
       <%= render 'layouts/header_small' %>
