add card repertory ol

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,18 @@
 <%= stylesheet_link_tag "article_show" %>
 
+<div class="card border-primary mb-3" style="max-width: 20rem;">
+  <div class="card-header">
+  <ol>
+  <li>Résumé</li>
+  <li>Introduction</li>
+  <li>Protocole</li>
+  <li>Résultats</li>
+  <li>Conclusion</li>
+  <li>Références</li>
+</ol>
+  </div>
+</div>
+
 <div class="col">
   <div class="offset-2 col-8 mx-auto">
     <div class="card border-secondary p-4 justify-content-center bg-light above-small ">
