add card introduction in show

--- a/app/views/articles/_details_article_show.html.erb
+++ b/app/views/articles/_details_article_show.html.erb
@@ -13,6 +13,13 @@
         </div>
       </div>
 
+      <div class="card border-light p-4 justify-content-center bg-light ">
+        <div class="card-header">Introduction</div>
+        <div class="card-body justify-content-center">
+        <br>
+          <%= simple_format(@article.introduction)%>
+        </div>
+      </div>
 
 
       <div class="card border-light p-4 justify-content-center bg-light ">
