intern link in repertory in show article ok

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,14 +1,15 @@
 <%= stylesheet_link_tag "article_show" %>
 
-<div class="card border-primary mb-3" style="max-width: 20rem;">
+<div class="card border-secondary mb-3" style="max-width: 10rem;">
   <div class="card-header">
   <ol>
-  <li>Résumé</li>
-  <li>Introduction</li>
-  <li>Protocole</li>
-  <li>Résultats</li>
-  <li>Conclusion</li>
-  <li>Références</li>
+  
+  <a href="#summary"><li>Résumé</li></a> 
+  <a href="#introduction"><li>Introduction</li></a>
+  <a href="#protocol"><li>Protocole</li></a>
+  <a href="#results"><li>Résultats</li></a>
+  <a href="#conclusion"><li>Conclusion</li></a>
+  <a href="#references"> <li>Références</li></a>
 </ol>
   </div>
 </div>
