--- a/app/views/articles/_details_article_show.html.erb
+++ b/app/views/articles/_details_article_show.html.erb
@@ -3,58 +3,63 @@
         <h3><b><%= @article.title%></b></h3>
       </div>
 
-
       <div class="summary">
         <div class="card border-secondary p-0 m-50 bg-light ">
-          <div class="card-header">Résumé</div>
-          <div class="card-body-summary justify-content-center">
-            <%= simple_format(@article.summary)%>
+          <div id="summary">
+            <div class="card-header">Résumé</div>
+            <div class="card-body-summary justify-content-center">
+              <%= simple_format(@article.summary)%>
+            </div>
           </div>
         </div>
       </div>
 
       <div class="card border-light p-4 justify-content-center bg-light ">
-        <div class="card-header">Introduction</div>
-        <div class="card-body justify-content-center">
-        <br>
-          <%= simple_format(@article.introduction)%>
-        </div>
-      </div>
-
-
-      <div class="card border-light p-4 justify-content-center bg-light ">
-        <div class="card-header">Protocole</div>
-        <div class="card-body justify-content-center">
+        <div id="introduction">
+          <div class="card-header">Introduction</div>
+          <div class="card-body justify-content-center">
           <br>
-            <%=simple_format(@article.protocol)%>
+            <%= simple_format(@article.introduction)%>
+          </div>
         </div>
       </div>
 
-
       <div class="card border-light p-4 justify-content-center bg-light ">
-        <div class="card-header">Résultats</div>
-        <div class="card-body justify-content-center">
-        <br>
-          <%= simple_format(@article.result)%>
+        <div id="protocol">
+          <div class="card-header">Protocole</div>
+          <div class="card-body justify-content-center">
+            <br>
+              <%=simple_format(@article.protocol)%>
+          </div>
         </div>
       </div>
 
-
-
       <div class="card border-light p-4 justify-content-center bg-light ">
-        <div class="card-header">Conclusion</div>
-        <div class="card-body justify-content-center">
-        <br>
-          <%= simple_format(@article.conclusion)%>
+        <div id="results">
+          <div class="card-header">Résultats</div>
+          <div class="card-body justify-content-center">
+          <br>
+            <%= simple_format(@article.result)%>
+          </div>
         </div>
       </div>
 
-
+      <div class="card border-light p-4 justify-content-center bg-light ">
+        <div id="conclusion">
+          <div class="card-header">Conclusion</div>
+          <div class="card-body justify-content-center">
+          <br>
+            <%= simple_format(@article.conclusion)%>
+          </div>
+        </div>
+      </div>
 
       <div class="card border-light p-4 justify-content-center bg-light ">
-        <div class="card-header">Références</div>
-        <div class="card-body-references justify-content-center">
-        <br>
-          <%= simple_format(@article.references)%>
+        <div id="references">
+          <div class="card-header">Références</div>
+          <div class="card-body-references justify-content-center">
+          <br>
+            <%= simple_format(@article.references)%>
+          </div>
         </div>
       </div>
