--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -8,7 +8,7 @@
     <% end %>
     <div class="d-flex justify-content-end mt-4">
       <ul class="pagination">
-        <li class="page-item disabled" id="btn-prev">
+        <li class="page-item" id="btn-prev">
           <%= link_to '<<', articles_path(page: @page - 1), class: 'page-link' %>
         </li>
         <li class="page-item" id="btn-1">
