--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -8,23 +8,23 @@
     <% end %>
     <div class="d-flex justify-content-end mt-4">
       <ul class="pagination">
-        <li class="page-item" id="btn-prev">
+        <li class="page-item disabled" id="btn-prev">
           <%= link_to '<<', articles_path(page: @page - 1), class: 'page-link' %>
         </li>
         <li class="page-item" id="btn-1">
-          <%= link_to @page - 2, articles_path(page: @page - 2), class: 'page-link' %>
+          <%= link_to '1', articles_path(page: 1), class: 'page-link' %>
         </li>
         <li class="page-item" id="btn-2">
-          <%= link_to @page - 1, articles_path(page: @page - 1), class: 'page-link' %>
+          <%= link_to '2', articles_path(page: 2), class: 'page-link' %>
         </li>
         <li class="page-item" id="btn-3">
-          <%= link_to @page, articles_path(page: @page), class: 'page-link' %>
+          <%= link_to '3', articles_path(page: 3), class: 'page-link' %>
         </li>
         <li class="page-item" id="btn-4">
-          <%= link_to @page + 1, articles_path(page: @page + 1), class: 'page-link' %>
+          <%= link_to '4', articles_path(page: 4), class: 'page-link' %>
         </li>
         <li class="page-item" id="btn-5">
-          <%= link_to @page + 2, articles_path(page: @page + 2), class: 'page-link' %>
+          <%= link_to '5', articles_path(page: 5), class: 'page-link' %>
         </li>
         <li class="page-item" id="btn-next">
           <%= link_to '>>', articles_path(page: @page + 1), class: 'page-link' %>
@@ -34,7 +34,7 @@
   </div>
 </div>
 
-<%= javascript_include_tag 'paging' %>ŝ
+<%= javascript_include_tag 'paging' %>
 
 <script>
   const ul = document.querySelector('ul.pagination');
