--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,12 +18,14 @@
     <% else %>
       <%= render 'layouts/header_big' %>
     <% end %>
-  <%= yield %>
-  <% unless controller_name == "sessions" || controller_name == "registrations" || controller_name == "passwords" %>
-  <%=render 'layouts/footer'%>
-  <% else %>
-  <%= render "layouts/footer_sticky" %>
-  <% end%>
+    <%= yield %>
+    <% if controller_name == "sessions" || controller_name == "registrations" || controller_name == "passwords" %>
+      <%= render "layouts/footer_sticky" %>
+    <% elsif @articles.nil? && controller_name == "articles" && action_name == "index" %>
+      <%= render "layouts/footer_sticky" %>
+    <% else %>
+      <%= render 'layouts/footer' %>
+    <% end %>
   </div>
 </div>
 
