--- a/app/views/articles/_no_more_articles.html.erb
+++ b/app/views/articles/_no_more_articles.html.erb
@@ -1,3 +1,3 @@
-<div class="text-center my-4">
+<div id="content" class="text-center my-4">
   <h3>Désolé mais nous n'avons pas pu charger plus d'articles...</h3>
 </div>
