position fixed of repertory ok

--- a/app/assets/stylesheets/article_show.css
+++ b/app/assets/stylesheets/article_show.css
@@ -26,3 +26,10 @@
 .badge-fake:hover {
   box-shadow: 0 0 0 0.10rem #2c3e50;
 }
+
+.repertory {
+  position: fixed;
+  top: 26rem; 
+  left:20rem; 
+  z-index: 1;
+}
