--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,16 +1,17 @@
 <%= stylesheet_link_tag "article_show" %>
 
-<div class="card border-secondary mb-3" style="max-width: 10rem;">
-  <div class="card-header">
-  <ol>
-  
-  <a href="#summary"><li>Résumé</li></a> 
-  <a href="#introduction"><li>Introduction</li></a>
-  <a href="#protocol"><li>Protocole</li></a>
-  <a href="#results"><li>Résultats</li></a>
-  <a href="#conclusion"><li>Conclusion</li></a>
-  <a href="#references"> <li>Références</li></a>
-</ol>
+<div class="repertory">
+  <div class="card border-none" style="max-width: 10rem;">
+    <div class="card-header">
+      <ol>
+        <a href="#summary"><li>Résumé</li></a> 
+        <a href="#introduction"><li>Introduction</li></a>
+        <a href="#protocol"><li>Protocole</li></a>
+        <a href="#results"><li>Résultats</li></a>
+        <a href="#conclusion"><li>Conclusion</li></a>
+        <a href="#references"> <li>Références</li></a>
+      </ol>
+    </div>
   </div>
 </div>
 
