--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -36,12 +36,12 @@
 
 <%= javascript_include_tag 'paging' %>
 
-<script>
-    const ul = document.querySelector('ul.pagination');
-    const url = "<%= articles_path %>" + "?page="
-    const page = <%= @page %>
+<script id='paging-script'>
+    let ul = document.querySelector('ul.pagination');
+    let url = "<%= articles_path %>" + "?page=";
+    let page = <%= @page %>;
 
-    const p = new Paging(ul, url, page)
+    let p = new Paging(ul, url, page)
 
     p.init()
 </script>
