--- a/app/views/articles/index.js.erb
+++ b/app/views/articles/index.js.erb
@@ -9,7 +9,7 @@ function reload() {
     document.querySelector('#card').insertAdjacentHTML('afterbegin', "<%= j render 'article_list' %>")
     <% end %>
     document.querySelector('#card').insertAdjacentHTML('beforeend', '<div id="paging" class="d-flex justify-content-end mt-4">')
-    document.querySelector('#paging').insertAdjacentHTML('afterbegin', paging.innerHTML)
+    document.querySelector('#paging').insertAdjacentHTML('afterbegin', "<%= j render 'paging' %>")
 }
 
 reload()
