repertory position ok hover ok justify ok color to validate & responsive to rework

--- a/app/assets/stylesheets/article_show.css
+++ b/app/assets/stylesheets/article_show.css
@@ -29,7 +29,20 @@
 
 .repertory {
   position: fixed;
-  top: 26rem; 
-  left:20rem; 
-  z-index: 1;
+  top: 37%; 
+  left:16.5%; 
+  z-index: 1;  
+  background-color:#E5E9E9 !important;
+  box-shadow:0.1rem 0 0.1rem 0 #f39c12 ;
 }
+
+.list-repertory a {
+  text-decoration: none;
+  color:black;
+}
+
+.list-repertory a:hover {
+  color:#f39c12;
+}
+
+  
