--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,19 +1,19 @@
 <%= stylesheet_link_tag "article_show" %>
 
-<div class="repertory">
-  <div class="card border-none" style="max-width: 10rem;">
-    <div class="card-header">
-      <ol>
-        <a href="#summary"><li>Résumé</li></a> 
-        <a href="#introduction"><li>Introduction</li></a>
-        <a href="#protocol"><li>Protocole</li></a>
-        <a href="#results"><li>Résultats</li></a>
-        <a href="#conclusion"><li>Conclusion</li></a>
-        <a href="#references"> <li>Références</li></a>
-      </ol>
-    </div>
-  </div>
+
+
+<div class="card-header repertory">
+  <ol class="list-repertory mt-2 mb-2">
+    <a href="#summary"><li>Résumé</li></a> 
+    <a href="#introduction"><li>Introduction</li></a>
+    <a href="#protocol"><li>Protocole</li></a>
+    <a href="#results"><li>Résultats</li></a>
+    <a href="#conclusion"><li>Conclusion</li></a>
+    <a href="#references"> <li>Références</li></a>
+  </ol>
 </div>
+
+
 
 <div class="col">
   <div class="offset-2 col-8 mx-auto">
