fixed by changing the left psition via the navbat toglle js

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,7 +4,7 @@
     <div class="card border-secondary p-4 justify-content-center bg-light above-small ">
 
       <div class="card-header repertory">
-        <ol class="list-repertory mt-2 mb-2">
+        <ol class="list-repertory my-2">
           <a href="#summary"><li>Résumé</li></a> 
           <a href="#introduction"><li>Introduction</li></a>
           <a href="#protocol"><li>Protocole</li></a>
