changed the 5 results limit from 5 to 20

--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -24,6 +24,9 @@
           </div>
         </div>
       </div>
+      <% if index == 20 %>
+        <% break %>
+      <% end %>
     <% end %>
   </div>
 </div>
