switched the footer in index to make it adapt to the amout of results returned

--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -30,3 +30,9 @@
     <% end %>
   </div>
 </div>
+
+<% if @results == [] %>
+  <%= render 'layouts/footer_sticky' %>
+<% else %>
+  <%= render 'layouts/footer' %>
+<% end %>
