--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
     <% if controller_name == "sessions" || controller_name == "registrations" || controller_name == "passwords" %>
       <%= render "layouts/footer_sticky" %>
     <% else %>
-      <% unless controller_name == "articles" && action_name == "index" %>
+      <% unless (controller_name == "articles" && action_name == "index") || (controller_name == "searches" && action_name == "index") %>
         <%= render 'layouts/footer' %>
       <% end %>
     <% end %>
