add static pages links into two footers

--- a/app/views/layouts/_footer_sticky.html.erb
+++ b/app/views/layouts/_footer_sticky.html.erb
@@ -13,7 +13,7 @@
       <div class="col-7 d-flex justify-content-between">
         <div class="col-2">
           <h6 class="text-uppercase fw-bold">
-            <a class="text-decoration-none" href="#">Nous Contacter</a>
+            <a class="text-decoration-none" href="<%= contact_path %>">Nous Contacter</a>
           </h6>
         </div>
         <div class="col-2">
@@ -27,12 +27,12 @@
         </div>
         <div class="col-2">
           <h6 class="text-uppercase fw-bold">
-            <a class="text-decoration-none" href="#">À propos</a>
+            <a class="text-decoration-none" href="<%= about_us_path %>">À propos</a>
           </h6>
         </div>
         <div class="col-2">
           <h6 class="text-uppercase fw-bold">
-            <a class="text-decoration-none" href="#">Qu'est-ce que Gaffex ?</a>
+            <a class="text-decoration-none" href="<%= about_gaffex_path %>">Qu'est-ce que Gaffex ?</a>
           </h6>
         </div>
       </div>
