added the value to index page

--- a/app/views/layouts/_header_big.html.erb
+++ b/app/views/layouts/_header_big.html.erb
@@ -2,7 +2,7 @@
 <div
   class="pt-5 text-center bg-image justify-content-start"
   style="
-    background-image: url('<%= asset_path 'bgimage.jpg' %>');
+  background-image: url('<%= asset_path 'bgimage.jpg' %>');
     height: 40vh;
     background-size: cover;
     background-position: 35% 65%;
@@ -14,11 +14,10 @@
       <div class="text-white">
         <%= image_tag asset_path("logoGaffex.png") %>
         <p class="mx-5">
-          Rejoignez-nous! Lorem ipsum dolor sit, amet consectetur adipisicing
-          elit. Magnam veritatis deleniti voluptates qui suscipit, esse cum
-          placeat totam neque, veniam vitae soluta distinctio dignissimos natus
-          nihil sed doloribus, corporis vel. Repellendus, dolore. Minima dolores
-          rerum sit reprehenderit possimus explicabo aperiam?
+          Développé par des bénévoles, GAFFEx est un outil qui permet aux scientifiques de partager leurs échecs avec la
+          communauté scientifique mondiale. Notre objectif est d’aider les chercheurs à économiser du temps et des
+          ressources précieux en ne répétant pas des expériences qui ont déjà éhouées. GAFFEx est une plateforme
+          librement accessible basée sur un système d’évaluation pondéré par des pairs indépendants.
         </p>
       </div>
     </div>
