added a container in the div surrounding images, and added a mex height of 18vh

--- a/app/views/articles/_article_list.html.erb
+++ b/app/views/articles/_article_list.html.erb
@@ -1,6 +1,6 @@
 <% @articles.each_with_index do |article, index| %>
   <div class="preview-article row mt-4">
-    <div class="d-flex justify-content-center col-2 col-md-4 border-primary">
+    <div class="container d-flex justify-content-center col-2 col-md-4 border-primary" style="max-height: 18vh">
       <%= image_tag(article.picture, class: 'img-thumbnail') %>
     </div>
     <div class="col">
