--- a/app/assets/stylesheets/article_show.css
+++ b/app/assets/stylesheets/article_show.css
@@ -34,7 +34,7 @@
   left: 83.5%;
   z-index: 1;  
   background-color:#E5E9E9 !important;
-  box-shadow:0.1rem 0 0.1rem 0 #f39c12 ;
+  box-shadow: 0.1rem 0 0.1rem 0  #9a9c9c ;
 }
 
 
