fix height pictures in article index

--- a/app/assets/stylesheets/article_index.css
+++ b/app/assets/stylesheets/article_index.css
@@ -2,7 +2,11 @@
     border: none !important;
   }
 
-.above {
-  position: relative;
-  top: -70px;
-}
+  .img-thumbnail {
+    padding: 0.25rem;
+    background-color: #fff;
+    border: 1px solid #dee2e6;
+    border-radius: 0.25rem;
+    max-width: 100%;
+    height: 9rem;
+  }
